--- a/requirements.txt
+++ b/requirements.txt
@@ -26,4 +26,5 @@ python-Levenshtein==0.23.0
 scikit-learn==1.4.0
 asyncpg>=0.27.0
 passlib[bcrypt]>=1.7.4
+PyJWT==2.8.0
 python-jose[cryptography]>=3.3.0
